@@ -19,21 +19,22 @@ package haveno.core.provider;
 
 import com.google.inject.Inject;
 import haveno.common.config.Config;
-import javax.inject.Named;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 import javax.annotation.Nullable;
+import javax.inject.Named;
+
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class ProvidersRepository {
-    private static final List<String> DEFAULT_NODES = List.of(
-            "http://a66ulzwhhudtqy6k2efnhodj2n6wnc5mnzjs3ocqtf47lwtcuo4wxyqd.onion/" // Haveno
+    private static final List<String> DEFAULT_NODES = Arrays.asList(
+            "http://elaxlgigphpicy5q7pi5wkz2ko2vgjbq4576vic7febmx4xcxvk6deqd.onion/", // Haveno
+            "http://a66ulzwhhudtqy6k2efnhodj2n6wnc5mnzjs3ocqtf47lwtcuo4wxyqd.onion/" // Cake
     );
 
     private final Config config;
